--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 
 <fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="1000.0"
-         style="-fx-background-color: #ADD8E6; "
+         style="-fx-background-color: rgba(173, 216, 230, 0.15); "
          type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/23.0.1"
          xmlns:fx="http://javafx.com/fxml/1">
     <children>
