--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -12,9 +12,9 @@
       <Button fx:id="clearChatButton" layoutX="131.0" layoutY="8.0" mnemonicParsing="false" onAction="#clearChat" prefHeight="25.0" prefWidth="120.0" text="Clear Chat" />
         <TextField fx:id="userInput" layoutY="558.0" onAction="#handleUserInput" prefHeight="41.0" prefWidth="910.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" />
         <Button fx:id="sendButton" layoutX="524.0" layoutY="758.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="41.0" prefWidth="76.0" text="Send" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0" />
-        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" layoutY="52.0" prefHeight="696.0" prefWidth="992.0" vvalue="1.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="52.0">
+        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" layoutY="40.0" prefHeight="708.0" prefWidth="990.0" vvalue="1.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="40.0">
             <content>
-                <VBox fx:id="dialogContainer" prefHeight="694.0" prefWidth="991.0" />
+                <VBox fx:id="dialogContainer" prefHeight="707.0" prefWidth="975.0" styleClass="dialog-container" />
             </content>
         </ScrollPane>
     </children>
