--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -6,15 +6,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nightcoder.javafx.MainWindow">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nightcoder.javafx.MainWindow">
     <children>
-      <Button fx:id="themeToggleButton" layoutX="5.0" layoutY="8.0" mnemonicParsing="false" onAction="#toggleTheme" prefHeight="25.0" prefWidth="120.0" text="Light Mode" />
-      <Button fx:id="clearChatButton" layoutX="131.0" layoutY="8.0" mnemonicParsing="false" onAction="#clearChat" prefHeight="25.0" prefWidth="120.0" text="Clear Chat" />
-        <TextField fx:id="userInput" layoutY="558.0" onAction="#handleUserInput" prefHeight="41.0" prefWidth="910.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" />
+      <Button fx:id="themeToggleButton" layoutX="5.0" layoutY="5.0" mnemonicParsing="false" onAction="#toggleTheme" prefHeight="25.0" prefWidth="120.0" text="Light Mode" />
+      <Button fx:id="clearChatButton" layoutX="130.0" layoutY="5.0" mnemonicParsing="false" onAction="#clearChat" prefHeight="25.0" prefWidth="120.0" text="Clear Chat" />
+        <TextField fx:id="userInput" layoutY="558.0" onAction="#handleUserInput" prefHeight="41.0" prefWidth="709.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" />
         <Button fx:id="sendButton" layoutX="524.0" layoutY="758.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="41.0" prefWidth="76.0" text="Send" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0" />
-        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" layoutY="40.0" prefHeight="708.0" prefWidth="990.0" vvalue="1.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="40.0">
+        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" layoutX="5.0" layoutY="43.0" prefHeight="615.0" prefWidth="490.0" vbarPolicy="ALWAYS" vvalue="1.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="34.0">
             <content>
-                <VBox fx:id="dialogContainer" prefHeight="707.0" prefWidth="975.0" styleClass="dialog-container" />
+                <VBox fx:id="dialogContainer" prefHeight="615.0" prefWidth="775.0" styleClass="dialog-container" />
             </content>
         </ScrollPane>
     </children>
