--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -5,13 +5,17 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-<fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="790.0"
-         type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/17"
+<fx:root alignment="TOP_RIGHT"
+         maxHeight="1.7976931348623157E308"
+         maxWidth="1.7976931348623157E308"
+         prefWidth="400.0"
+         type="javafx.scene.layout.HBox"
+         xmlns="http://javafx.com/javafx/17"
          xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="dialog" minHeight="-Infinity" maxWidth="Infinity"
+        <Label fx:id="dialog" text="Label" wrapText="true" minHeight="-Infinity"
                style="-fx-font-family: 'Monospaced'; -fx-font-size: 14px; -fx-padding: 0 10px 0 10px; "
-               text="Label" wrapText="true" HBox.hgrow="ALWAYS" />
+               HBox.hgrow="ALWAYS" />
         <ImageView fx:id="displayPicture" fitHeight="99.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true" />
     </children>
     <padding>
